--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
   },
   "homepage": "https://github.com/obsessiveprogrammer/mongodb-igniter#readme",
   "dependencies": {
-    "mongodb": "^2.2.34",
-    "@types/mongodb": "^2.2.18"
+    "@types/mongodb": "^3.1.4",
+    "mongodb": "^3.1.3"
   },
   "devDependencies": {
-    "ts-node": "^4.1.0",
-    "tslint": "^5.8.0",
-    "typescript": "^2.6.2"
+    "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
+    "typescript": "^3.0.1"
   }
 }
